@@ -138,13 +138,6 @@ _force_absolute_path
 #
 _module_start
 #------------------------------------------------------------------------------
-# システム関連モジュール
-#------------------------------------------------------------------------------
-*load_SyntaxHighlight
-<script>load_SyntaxHighlight();</script>
-
-
-#------------------------------------------------------------------------------
 # YouTube モジュール
 #------------------------------------------------------------------------------
 *youtube
