@@ -98,6 +98,7 @@ div.ascii-art {
 	margin-bottom:	0px;
 	font-family: "Mona", "MS PGothic", "ＭＳ Ｐゴシック", "IPA MONAPGOTHIC", "IPA モナー Pゴシック", sans-serif;
 }
+/* highlight.js */
 
 /* 等幅 */
 .mono, .pre {
